removed unnecessary text & form-group alignment fix

--- a/forgotpassword.css
+++ b/forgotpassword.css
@@ -52,6 +52,7 @@ p {
 .form-group {
     text-align: left;
     margin-bottom: 15px;
+    margin-right: 1.4rem;
 }
 
 label {
